# verilog-mic-array

./: .gitignore  .gitmodules  Makefile  README.md
.slang/: server.json
mcu-benchmark/arduino-uno-w5500/: platformio.ini
mcu-benchmark/arduino-uno-w5500/src/: main.cpp  main.cpp.old.v2
mcu-experiments/pio-arduino-uno-w5500/: platformio.ini
mcu-experiments/pio-arduino-uno-w5500/src/: main.cpp
mcu-experiments/pio-arduino-uno-w5500/src/w5500-ether/: main.cpp  main.cpp.old.v1
mcu-experiments/pio-arduino-uno-w5500/src/w5500-spi/: main.cpp  main.cpp.bak
mcu-experiments/tm138kpro-logic-analyzer-spi-w5500/: .gitignore  tm138kpro.gprj
mcu-experiments/tm138kpro-logic-analyzer-spi-w5500/impl/: tm138kpro_process_config.json
mcu-experiments/tm138kpro-logic-analyzer-spi-w5500/src/: spi_spiclk.rao  top.cst  top.cst.bak  top.sdc  top.sv
mcu-experiments/tm138kpro-logic-analyzer-spi-w5500/src/ip/gowin_pll/: gowin_pll.ipc  gowin_pll.mod  gowin_pll.v  gowin_pll_tmp.v
research/: .pre-commit-config.yaml  03-analyze-mic-rec.ipynb  04-analyze-w5500-spi-rec.ipynb  042-analyze-spi-recordings.ipynb  05-uart-prbs-benchmark.ipynb  pyproject.toml  receiver-udp.py  w5500-spi-seq1.txt  w5500-spi-seq2.txt  w5500-spi-seq3.txt
rtl/: common_top.sv  counter.sv  counter_timer.sv  fifo_dualport.sv  inmp441_mic_i2s_receiver_with_valid.sv  spi.sv  sram_dualport.sv  w5500_axi_over_spi.sv  w5500_cpu_driver.sv  w5500_ucpu_driver.sv
rtl/litex-femtorv-soc/: README.md  de10lite_minimal.py  de10lite_original.py  la_soc_deepseek.py  litex_la_soc_gemini.py  pyproject.toml
rtl/litex-femtorv-soc/deepseek-generated/: la_soc_old.py  virt_soc.py
rtl/litex-femtorv-soc/gemini-generated/: litex_la_soc.py  logic_analyzer_soc.py  virt_soc.py
rtl/litex-femtorv-soc/kimi-generated/: virt_soc.py
sim/icarus/: testbench.sv  w5500_ucpu_driver_tb.sv
synth/de10_lite/: board_specific.qpf  board_specific.qsf  board_specific_top.sv  stp1.stp
synth/de10_lite/ip/logic_analyzer/: debug_w5500_driver.stp  spi_stp.stp  stp1.stp
synth/de10_lite/ip/quartus_pll/: quartus_pll.bsf  quartus_pll.ppf  quartus_pll.qip  quartus_pll.v  quartus_pll_bb.v  quartus_pll_inst.v
synth/zeowaa/: board_specific.qpf  board_specific.qsf  board_specific_top.sv  virtual_probe.sopcinfo
synth/zeowaa/.qsys_edit/: preferences.xml
synth/zeowaa/ip/: logic_analyzer.qsys  logic_analyzer.sopcinfo  virtual_probe.qsys  virtual_probe.sopcinfo
synth/zeowaa/ip/.qsys_edit/: logic_analyzer.xml
synth/zeowaa/ip/logic_analyzer/: logic_analyzer.bsf  logic_analyzer.cmp  logic_analyzer.html  logic_analyzer.ppf  logic_analyzer.xml  logic_analyzer_bb.v  logic_analyzer_generation.rpt  logic_analyzer_inst.v  logic_analyzer_inst.vhd
synth/zeowaa/ip/logic_analyzer/synthesis/: logic_analyzer.debuginfo  logic_analyzer.qip  logic_analyzer.v
synth/zeowaa/ip/virtual_probe/: virtual_probe.bsf  virtual_probe.cmp  virtual_probe.html  virtual_probe.ppf  virtual_probe.xml  virtual_probe_bb.v  virtual_probe_generation.rpt  virtual_probe_inst.v  virtual_probe_inst.vhd
synth/zeowaa/ip/virtual_probe/synthesis/: virtual_probe.debuginfo  virtual_probe.qip  virtual_probe.v
