[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "plotly>=6.8.0",
    "pyvcd>=0.4.1",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
