[project]
name = "litex-femtorv-soc"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "setuptools",
    "wheel",
    "meson",
    "ninja",

    "migen",
    "litex",
    "litex-boards",
    # "liteiclink",
    "liteeth",
    "litedram",
    # "litepcie",
    # "litesata",
    # "litesdcard",
    "litescope",
    # "litejesd204b",
    "litespi",
    "litei2c",
    "pythondata-software-picolibc",
    "pythondata-software-compiler_rt",
    # "pythondata-misc-tapcfg",
    # "pythondata-misc-usb_ohci",
    # "pythondata-cpu-lm32",
    # "pythondata-cpu-mor1kx",
    # "pythondata-cpu-marocchino",
    # "pythondata-cpu-microwatt",
    # "pythondata-cpu-blackparrot",
    # "pythondata-cpu-coreblocks",
    # "pythondata-cpu-cv32e40p",
    # "pythondata-cpu-cv32e41p",
    # "pythondata-cpu-cva5",
    # "pythondata-cpu-cva6",
    # "pythondata-cpu-ibex",
    # "pythondata-cpu-minerva",
    # "pythondata-cpu-naxriscv",
    # "pythondata-cpu-openc906",
    # "pythondata-cpu-picorv32",
    # "pythondata-cpu-rocket",
    # "pythondata-cpu-sentinel",
    # "pythondata-cpu-serv",
    # "pythondata-cpu-vexiiriscv",
    # "pythondata-cpu-vexriscv",
    # "pythondata-cpu-vexriscv-smp",
]

[tool.uv.sources]
migen                           = { git = "https://git.m-labs.hk/M-Labs/migen/"                                               }
litex                           = { git = "https://github.com/enjoy-digital/litex/",                          tag = "2026.04" }
liteiclink                      = { git = "https://github.com/enjoy-digital/liteiclink/",                     tag = "2026.04" }
liteeth                         = { git = "https://github.com/enjoy-digital/liteeth/",                        tag = "2026.04" }
litedram                        = { git = "https://github.com/enjoy-digital/litedram/",                       tag = "2026.04" }
litepcie                        = { git = "https://github.com/enjoy-digital/litepcie/",                       tag = "2026.04" }
litesata                        = { git = "https://github.com/enjoy-digital/litesata/",                       tag = "2026.04" }
litesdcard                      = { git = "https://github.com/enjoy-digital/litesdcard/",                     tag = "2026.04" }
litescope                       = { git = "https://github.com/enjoy-digital/litescope/",                      tag = "2026.04" }
litejesd204b                    = { git = "https://github.com/enjoy-digital/litejesd204b/",                   tag = "2026.04" }
litespi                         = { git = "https://github.com/litex-hub/litespi/",                            tag = "2026.04" }
litei2c                         = { git = "https://github.com/litex-hub/litei2c/",                            tag = "2026.04" }
litex-boards                    = { git = "https://github.com/litex-hub/litex-boards/",                       tag = "2026.04" }
pythondata-software-picolibc    = { git = "https://github.com/litex-hub/pythondata-software-picolibc/",       tag = "2026.04" }
pythondata-software-compiler_rt = { git = "https://github.com/litex-hub/pythondata-software-compiler_rt/",    tag = "2026.04" }
pythondata-misc-tapcfg          = { git = "https://github.com/litex-hub/pythondata-misc-tapcfg/",             tag = "2026.04" }
pythondata-misc-usb_ohci        = { git = "https://github.com/litex-hub/pythondata-misc-usb_ohci/",           tag = "2026.04" }
pythondata-cpu-lm32             = { git = "https://github.com/litex-hub/pythondata-cpu-lm32/",                tag = "2026.04" }
pythondata-cpu-mor1kx           = { git = "https://github.com/litex-hub/pythondata-cpu-mor1kx/",              tag = "2026.04" }
pythondata-cpu-marocchino       = { git = "https://github.com/litex-hub/pythondata-cpu-marocchino/",          tag = "2026.04" }
pythondata-cpu-microwatt        = { git = "https://github.com/litex-hub/pythondata-cpu-microwatt/",           tag = "2026.04" }
pythondata-cpu-blackparrot      = { git = "https://github.com/litex-hub/pythondata-cpu-blackparrot/",         tag = "2026.04" }
pythondata-cpu-coreblocks       = { git = "https://github.com/litex-hub/pythondata-cpu-coreblocks/",          tag = "2026.04" }
pythondata-cpu-cv32e40p         = { git = "https://github.com/litex-hub/pythondata-cpu-cv32e40p/",            tag = "2026.04" }
pythondata-cpu-cv32e41p         = { git = "https://github.com/litex-hub/pythondata-cpu-cv32e41p/",            tag = "2026.04" }
pythondata-cpu-cva5             = { git = "https://github.com/litex-hub/pythondata-cpu-cva5/",                tag = "2026.04" }
pythondata-cpu-cva6             = { git = "https://github.com/litex-hub/pythondata-cpu-cva6/",                tag = "2026.04" }
pythondata-cpu-ibex             = { git = "https://github.com/litex-hub/pythondata-cpu-ibex/",                tag = "2026.04" }
pythondata-cpu-minerva          = { git = "https://github.com/litex-hub/pythondata-cpu-minerva/",             tag = "2026.04" }
pythondata-cpu-naxriscv         = { git = "https://github.com/litex-hub/pythondata-cpu-naxriscv/",            tag = "2026.04" }
pythondata-cpu-openc906         = { git = "https://github.com/litex-hub/pythondata-cpu-openc906/",            tag = "2026.04" }
pythondata-cpu-picorv32         = { git = "https://github.com/litex-hub/pythondata-cpu-picorv32/",            tag = "2026.04" }
pythondata-cpu-rocket           = { git = "https://github.com/litex-hub/pythondata-cpu-rocket/",              tag = "2026.04" }
pythondata-cpu-sentinel         = { git = "https://github.com/litex-hub/pythondata-cpu-sentinel/",            tag = "2026.04" }
pythondata-cpu-serv             = { git = "https://github.com/litex-hub/pythondata-cpu-serv/",                tag = "2026.04" }
pythondata-cpu-vexiiriscv       = { git = "https://github.com/litex-hub/pythondata-cpu-vexiiriscv/",          tag = "2026.04" }
pythondata-cpu-vexriscv         = { git = "https://github.com/litex-hub/pythondata-cpu-vexriscv/",            tag = "2026.04" }
pythondata-cpu-vexriscv-smp     = { git = "https://github.com/litex-hub/pythondata-cpu-vexriscv-smp/",        tag = "2026.04" }
